# cobalt

./: .gitmodules  BUILD.gn  CMakeLists.txt  README.md  cobaltb.py  cr-buildbucket.cfg  encrypted_message.proto  envelope.proto  event.proto  experiment.proto  luci-scheduler.cfg  observation.proto  observation2.proto  observation_batch.proto  project.cfg  report_row.proto  window_size.proto
algorithms/rappor/: BUILD.gn  CMakeLists.txt  bloom_bit_counter_test.cc  lasso_runner.cc  lasso_runner.h  lasso_runner_test.cc  lasso_runner_test.h  lasso_runner_unit_tests.cc  rappor_analyzer.cc  rappor_analyzer.h  rappor_analyzer_manual_tests.cc  rappor_analyzer_test.cc  rappor_analyzer_test.h  rappor_analyzer_unit_tests.cc  rappor_analyzer_utils.cc  rappor_analyzer_utils.h  rappor_config_helper.cc  rappor_config_helper.h  rappor_config_helper_test.cc  rappor_config_validator.cc  rappor_encoder.cc  rappor_test_utils.cc  rappor_test_utils.h
analyzer/analyzer_service/: analyzer.proto
analyzer/report_master/: CMakeLists.txt  auth_enforcer.cc  histogram_analysis_engine.cc  histogram_analysis_engine_test.cc  report_master.proto
analyzer/store/: observation_store.h
config/: BUILD.gn  CMakeLists.txt  client_config.cc  client_config.h  cobalt_config.proto  config.h  id.cc  id.h  id_test.cc  metric_definition.proto  metrics.proto  project.proto  project_configs.cc  project_configs.h  project_configs_test.cc  report_definition.proto  window_size.proto
config/config_parser/: CMakeLists.txt  test_stable_config_parser.py
config/config_parser/src/: BUILD.gn  config_parser_main.go
config/config_parser/src/config_parser/: config_reader.go  config_reader_test.go  git.go  id.go  id_test.go  output.go  output_test.go  project_config.go  project_config_test.go  project_list.go  project_list_test.go
config/config_parser/src/config_parser/output_test_files/: golden_v0.cb.dart  golden_v0.cb.h  golden_v1.cb.dart  golden_v1.cb.h
config/config_parser/src/config_validator/: common_validator.go  common_validator_test.go  encodings.go  encodings_test.go  metric_definitions.go  metric_definitions_test.go  metrics.go  metrics_test.go  report_definitions.go  report_definitions_test.go  reports.go  reports_test.go  system_profile_field.go  system_profile_field_test.go  validator.go
config/config_parser/src/yamlpb/: yamlpb_test.go
config/validation/: BUILD.gn
encoder/: BUILD.gn  CMakeLists.txt  encoder.cc  encoder.h  encoder_test.cc  encoder_test_config.yaml  envelope_maker.cc  envelope_maker.h  envelope_maker_test.cc  envelope_maker_test_config.yaml  fake_system_data.h  file_observation_store.cc  file_observation_store.h  file_observation_store_internal.proto  file_observation_store_test.cc  file_observation_store_test_config.yaml  memory_observation_store.cc  memory_observation_store.h  observation_store.cc  observation_store.h  observation_store_update_recipient.h  posix_file_system.cc  posix_file_system.h  project_context.cc  project_context.h  shipping_dispatcher_test.cc  shipping_manager.cc  shipping_manager.h  shipping_manager_test.cc  shipping_manager_test_config.yaml  system_data.h  system_data_test.cc  upload_scheduler.cc  upload_scheduler.h  upload_scheduler_test.cc
end_to_end_tests/src/: cobalt_e2e_test.go
logger/: BUILD.gn  CMakeLists.txt  encoder.cc  encoder.h  encoder_test.cc  internal_metrics.cc  internal_metrics.h  logger.cc  logger.h  logger_interface.h  logger_test.cc  observation_writer.cc  observation_writer.h  project_context.cc  project_context.h  proto_utils.cc  proto_utils.h  rappor_settings.h  status.h
production/fuchsia-cobalt-us-central1-c/: versions.json
shuffler/src/dispatcher/: dispatcher_test.go
shuffler/src/receiver/: receiver.go  receiver_test.go
shuffler/src/shuffler_config/: config_util_test.go
shuffler/src/storage/: key_util_test.go
shuffler/src/util/: encrypted_message_util_test.go  rand_util_test.go
tools/: CMakeLists.txt  cpplint.py
tools/test_app/: test_app.cc  test_app.h  test_app_test.cc
tools/test_app2/: CMakeLists.txt  test_app.cc  test_app.h  test_app_main.cc  test_app_test.cc
util/: BUILD.gn  CMakeLists.txt  consistent_proto_store.cc  consistent_proto_store.h  consistent_proto_store_test.cc  consistent_proto_store_test.proto  datetime_util.cc  datetime_util.h  encrypted_message_util.cc  file_system.h  posix_file_system.cc  posix_file_system.h  protected_fields.h  status.h
util/clearcut/: curl_handle.cc
util/lossmin/: CMakeLists.txt  README.md  eigen-types.h
util/lossmin/minimizers/: CMakeLists.txt  gradient-evaluator.cc  gradient-evaluator.h  loss-minimizer.cc  loss-minimizer.h  parallel-boosting-with-momentum.cc  parallel-boosting-with-momentum.h
